<resources>
    <string name="app_name">Quizzer</string>
    <string name="quizzer">QUIZZER!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="e_g_bruce_wayne">e.g, Bruce Wayne</string>
    <string name="start">START</string>
    <string name="save">SAVE</string>
    <string name="result">RESULT</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="your_score_is_0_out_of_10">Your Score is 0 out of 10</string>
    <string name="bruce_wayne">Bruce Wayne</string>
    <string name="finish">FINISH</string>
    <string name="image_of_a_trophy">Image of a Trophy</string>
</resources>