<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_trophy"
        android:contentDescription="@string/image_of_a_trophy" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bruce_wayne"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16sp"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_score_is_0_out_of_10"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="16sp"
        android:padding="10sp"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="18sp"
        android:layout_margin="20sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/design_default_color_primary" />
</LinearLayout>