<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quizzer"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#363a43"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_your_name"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#7a8089"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_g_bruce_wayne"
                        android:inputType="textCapWords"
                        android:textColor="#363a43"
                        android:textColorHint="#7a8089">

                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textSize="16sp"
                    android:layout_marginTop="18sp"
                    android:textColor="@color/white">

                </Button>
            </LinearLayout>


        </androidx.cardview.widget.CardView>


</LinearLayout>